11 Jul 2018
fix: query non existent table
add: TMDb Top 100 Movies
add: images table to store image urls
update: API get images to store urls
update: get_body_image to get from images table and get poster or background depending on screen orientation
update: normalize relative urls in js files
remove: Atlantis from countries signup.php invite_signup.php
fix: error on valid empty post contents takesignup.php
remove: optimize/blur gifs ImageProxy.php
fix: check if empty beofre use details.php
update: README innodb_autoinc_lock_mode = 0
fix: undefined $count admin/bans.php
fix: search by category browse.php
fix: missing require thanks.php
fix: missing require bookmark.php

9 Jul 2018
fix: uptime time display
fix: mybonus.php sort order
fix: crazyhour global message

8 Jul 2018
fix: get empty image get_body_image()
fix: avatar max-width
fix: update user birthday when birthday not set
fix: get random image get_body_image()
update: delete get_body_image() cache on new upload
fix: url getting deleted when edit takeedit.php
update: remove banner and background when torrent poster is changed
update: clean up get_show_name() for better search results
fix: emoticons.php
update: bitbucket.php allow webp images, optimize images after upload
update: details.php to show which api lookup results are showing
update: composer
fix: background art not showing when enabled
add: user option to use 12 or 24 hour clock everywhere except AJAX Chat(working on it)
update: database update process
remove: some extraneous spaces in lang files

7 Jul 2018
fix: plural question(s) in trivia points pm
add: option to use 12 or 24 hour clock everywhere except AJAX Chat(working on it)

5 Jul 2018
fix: remove invalid chars from uploaded nfo before db insert
fix: typo in bittorrent.php
fit: incorrect method name

1 Jul 2018
fix: check if folder exists before setting perms set_perms.php
update: set new/updated files owner:group according to current owner:group set_perms.php